URL shortner initial commit

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,8 +19,16 @@
   "portsAttributes": {
     "3000": {
       "label": "Application",
-      "onAutoForward": "openPreview"
+      "onAutoForward": "openPreview",
+      "visibility": "public"
     }
   },
-  "forwardPorts": [3000]
+  "forwardPorts": [
+    3000
+  ],
+  "features": {
+    "ghcr.io/devcontainers-extra/features/autoenv:1": {},
+    "ghcr.io/devcontainers-extra/features/mongodb-atlas-cli-homebrew:1": {},
+    "ghcr.io/devcontainers-extra/features/mongosh-homebrew:1": {}
+  }
 }
